<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/lay_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <!-- Post ID -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_post_id_fb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="85"
                    android:fontFamily="@font/arima_semi_bold"
                    android:text="@string/_3127726120812575_3127805307471323"
                    android:textColor="@color/tertiary"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:gravity="end"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/btn_edit_fb"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:background="@drawable/bg_circular_edit"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/arima_medium"
                            android:text="@string/update"
                            android:textColor="@color/white"
                            android:textSize="12sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
            <!-- Message -->
            <TextView
                android:id="@+id/txt_message_fb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arima_medium"
                android:text="@string/posted"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <!-- Status Type -->
            <TextView
                android:id="@+id/txt_status_type_fb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arima_medium"
                android:text="@string/mobile_status_update"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/img_full_picture_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
            <!-- Is Published -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/arima_extra_light"
                    android:text="@string/is_published"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_is_published_fb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arima_extra_light"
                    android:text="@string/true_"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>
            <!-- Created Time -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/arima_extra_light"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_created_time_fb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arima_extra_light"
                    android:text="@string/_2022_07_06t04_54_05_0000"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>