<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/lay_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"

        app:cardElevation="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <!-- Post ID -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_post_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="90"
                    android:fontFamily="@font/arima_semi_bold"
                    android:text="@string/_3127726120812575_3127805307471323"
                    android:textColor="@color/tertiary"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/btn_create_in_firebase"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:src="@drawable/ic_baseline_control_point_24"
                    app:tint="@color/secondary" />

            </LinearLayout>
            <!-- Message -->
            <TextView
                android:id="@+id/txt_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arima_medium"
                android:text="@string/posted"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <!-- Status Type -->
            <TextView
                android:id="@+id/txt_status_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arima_medium"
                android:text="@string/mobile_status_update"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/img_full_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
            <!-- Is Published -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/arima_extra_light"
                    android:text="@string/is_published"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_is_published"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arima_extra_light"
                    android:text="@string/true_"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>
            <!-- Created Time -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/arima_extra_light"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_created_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arima_extra_light"
                    android:text="@string/_2022_07_06t04_54_05_0000"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>