<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_circular_submit"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="end">

                <LinearLayout
                    android:id="@+id/btn_edit_fb"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_circular_edit"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/arima_medium"
                        android:text="@string/update"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_delete_fb"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/bg_circular_delete"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_delete_forever_24"
                        app:tint="@color/white" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_post_id_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/arima_semi_bold"
            android:gravity="center"
            android:text="@string/_3127726120812575_3127805307471323"
            android:textColor="@color/tertiary"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <!-- Post Message -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:fontFamily="@font/arima_medium"
                    android:text="@string/message"
                    android:textColor="@color/gray_text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_message_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="75"
                    android:fontFamily="@font/arima_medium"
                    android:text="@string/posted"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>
            <!-- Post status -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:fontFamily="@font/arima_medium"
                    android:text="@string/status_type"
                    android:textColor="@color/gray_text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_status_type_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:fontFamily="@font/arima_medium"
                    android:text="@string/mobile_status_update"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>
            <!-- Is Published -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/arima_extra_light"
                    android:text="@string/is_published"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_is_published_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arima_extra_light"
                    android:text="@string/true_"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>
            <!-- Created Time -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/arima_extra_light"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_created_time_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arima_extra_light"
                    android:text="@string/_2022_07_06t04_54_05_0000"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>
            <!-- Image -->
            <ImageView
                android:id="@+id/img_full_picture_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="5dp" />

        </LinearLayout>
    </LinearLayout>
</layout>