<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="none"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/add_facebook_post"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_baseline_control_point_24"
                        app:tint="@color/secondary" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arima_bold"
                    android:gravity="center"
                    android:text="@string/search_facebook_post_id"
                    android:textColor="@color/secondary"
                    android:textSize="18sp" />

                <!-- Input ID Post -->
                <EditText
                    android:id="@+id/search_message_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="30dp"
                    android:inputType="text"
                    android:textColor="@color/secondary" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/bg_circular"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"/>

                <!-- Recycler view -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_firebase_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp" />

                <TextView
                    android:id="@+id/tvLoadingData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_data"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:layout_marginTop="30dp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/txtNoData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data_to_display"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:layout_marginTop="30dp"
                    android:visibility="gone"/>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>